# LangChain-RAG-FastAPI-Service

./: .gitignore  README.md
DjangoUserService/: api.md  manage.py  pyproject.toml  requirements.txt
DjangoUserService/DjangoOfficeProject/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
DjangoUserService/DjangoUserService/: asgi.py  settings.py  urls.py  wsgi.py
DjangoUserService/apps/file/: apps.py  serializers.py  urls.py  views.py
DjangoUserService/apps/secret/: make_it_secret.py
DjangoUserService/apps/user/: apps.py  authentications.py  fatherClass.py  models.py  serializers.py  urls.py  views.py
DjangoUserService/apps/user/migrations/: 0001_initial.py  0002_remove_officeuser_groups_remove_officeuser_is_staff_and_more.py  0002_user_avatar_alter_user_last_login.py
DjangoUserService/apps/utils/: cache_utils.py  rate_limit_utils.py
DjangoUserService/templates/: activation.html
backend/: .env.example  api.md  directory.md  main.py  pyproject.toml  requirements.txt
backend/app/agent/: agent.py  agent_tools.py
backend/app/cache/: redis_decorator.py
backend/app/config/: chroma.yaml  db_config.py  prompt.yaml  rag.yaml
backend/app/core/: failed_response.py  failed_response_register.py  rate_limit.py  success_response.py
backend/app/db/: db_config.py  redis_config.py
backend/app/model/: chat_history.py
backend/app/prompt/: main_prompt.txt  rag_summarize.txt  reorder_prompt.txt  report_prompt.txt
backend/app/rag/: rag_service.py  reorder_service.py  text_spliter.py  vector_store.py
backend/app/router/: chat.py  chat_service.py  health.py  models.py  routers.py
backend/app/schemas/: models.py
backend/app/services/: __init__.py  database_session_manager.py
backend/app/utils/: auth_utils.py  factory.py  file_handler.py  prompt_loader.py
backend/config/: agent.yaml  chroma.yaml  prompt.yaml  rag.yaml
backend/data/: sessions.json
docs/: interview_project_summary.md  troubleshooting.md
front/: api_django.md  vite.config.js
front/src/: style.css
front/src/components/: TabBar.vue
front/src/config/: api.js
front/src/router/: index.js
front/src/store/: session.js  user.js
front/src/views/: AIChat.vue  Login.vue  My.vue  Profile.vue  (+3 more)
